[tmp] fail to compile.

--- a/16337269_颜彬_实验报告.md
+++ b/16337269_颜彬_实验报告.md
@@ -21,6 +21,37 @@ $ make run_cubic
 ![](helloworld.png)
 ### 实验二
 ![](cubic.png)
+## 文件介绍和运行平台
+```
+.
+├── 16337269_颜彬_实验报告.html
+├── 16337269_颜彬_实验报告.md
+├── 16337269_颜彬_实验报告.pdf
+├── common
+├── cubic
+├── cubic.png
+├── distrib
+├── external
+├── helloworld
+├── helloworld.png
+└── Makefile
+
+5 directories, 6 files
+```
+- 16337269_颜彬_实验报告.pdf
+项目实验报告
+- common/
+放置各个程序都可能需要的共同的代码。例如跟着色器有关的辅助代码
+- external/
+外部库，存放例如`glew`, `glfw`, `glm`等库。
+- helloworld/
+实验一的源码。画出一个白色方框
+- cubic/
+实验二的源码，画出一个立体的正方形
+- Makefile
+构筑整个项目的Makefile 文件
+- cubic.png, helloworld.png
+两张截图
 ## 项目细节
 ### 实验一细节
 `glfw`用于产生窗口。openGL本身不带有产生窗口的功能。故需要`glfw`作所有跟窗口有关的操作，包括事件响应等。
