--- a/16337269_颜彬_实验报告.md
+++ b/16337269_颜彬_实验报告.md
@@ -7,20 +7,11 @@
 $ make
 ```
 ## 运行方法
-### 实验一
 ``` sh
-$ make run_helloworld
+$ make run
 ```
-### 实验二
-``` sh
-$ make run_cubic
-```
-
 ## 运行结果
-### 实验一
-![](helloworld.png)
-### 实验二
-![](cubic.png)
+![](star.png)
 ## 文件介绍和运行平台
 ```
 .
