--- a/16337269_颜彬_实验报告.md
+++ b/16337269_颜彬_实验报告.md
@@ -12,166 +12,168 @@ $ make
 $ make run
 ```
 ## 运行结果
-![](star.png)
-## 项目亮点
-###　渐变效果
-实现了星球随着时间变化时，从亮到暗、再从暗到亮的不断变化的效果
-### 自动运行模式
-运行文件后，按下`R`后进入自动运行模式，小球会自动自转并绕着大球公转。
-按下`Shift+R`关闭自动运行。关闭后用户可以使用`D`, `Shift+D`, `Y`, `Shift+Y`自由地操控小球。
+见视频`程序运行视频-2018-06-18_14.36.44.mp4`
+## 运行截图
+![](spot1.png)
+![](spot2.png)
+![](spot3.png)
+## 控制方式
+按下`W`, `A`, ,`S`, `D`, `J`, `K`, 可操控摄像机的位置。
+
 ## 文件介绍
 ### 根目录文件介绍
 ```
 .
-├── 16337269_颜彬_实验报告.html
 ├── 16337269_颜彬_实验报告.md
-├── 16337269_颜彬_实验报告.pdf
 ├── common/
+├── light/
 ├── distrib/
 ├── external/
+├── .git
+├── .gitignore
 ├── Makefile
-├── star/
-└── star.png
+├── .vscode
+└── 程序运行视频-2018-06-18_14.36.44.mp4
 
-4 directories, 5 files
+5 directories, 4 files
 ```
 - 16337269_颜彬_实验报告.pdf
-项目实验报告
-- common/
-放置各个程序都可能需要的共同的代码。例如跟着色器有关的辅助代码
-- external/
-外部库，存放例如`glew`, `glfw`, `glm`等库。
-- star/
-项目源码。存放画出星球的代码。
+实验报告
 - Makefile
-构筑整个项目的Makefile 文件
-- star.png
-项目截图
-### 源码目录文件介绍
-```
-.
-├── include/
-│   ├── config.hpp
-│   ├── Makefile
-│   ├── mymath.cpp
-│   └── mymath.hpp
-├── Makefile
-├── SimpleFragmentShader.fragmentshader
-├── SimpleVertexShader.vertexshader
-├── star.cpp
-└── star.out
-```
-- include
-存放自己编写的项目中需要的代码
-    - mymath.cpp mymath.hpp
-    存放数学辅助函数。包括画出圆的经线和纬线等。
-    - config.hpp
-    定义一些配置全局变量。例如圆的经线有多少，纬线有多少，程序的运行速度等。
-- star.cpp
-程序主体和入口
-- star.out
-可执行文件
-- SimpleVertexShader.vertexshader
-vertex着色器
-- SimpleFragmentShader.fragmentshader
-fragment着色器
-## 项目细节
-与上个实验相比，本次实验增加的地方有以下几个方面
-- 按键响应
-通过按键回调函数修改全局变量的方式和程序其他部分交互
-- 球的框线
-使用基本解析几何的方式，用圆的参数方程分别画出纬线和经线
-- 立体效果
-采用Model, View, Projection矩阵的变换来实现
-### 按键响应
-定义了回调函数
+文件总Makefile
+- light/
+存放带有光源的茶壶的文件
+- 程序运行视频-2018-06-08_11.36.39.mp4
+程序运行的示范视频
+## 实现思路
+### 基础光照
+本项目的光照基于冯氏光照模型。该模型是一种较为简单的光照模型。
+
+冯氏光照模型中的光由环境光、漫反射光和镜面反射光三部分组成。
+
+- 环境光照(Ambient Lighting)
+即使在黑暗的情况下，世界上通常也仍然有一些光亮（月亮、远处的光），所以物体几乎永远不会是完全黑暗的。为了模拟这个，我们会使用一个环境光照常量，它永远会给物体一些颜色。
+- 漫反射光照(Diffuse Lighting)
+模拟光源对物体的方向性影响(Directional Impact)。它是冯氏光照模型中视觉上最显著的分量。物体的某一部分越是正对着光源，它就会越亮。
+- 镜面光照(Specular Lighting)
+模拟有光泽物体上面出现的亮点。镜面光照的颜色相比于物体的颜色会更倾向于光的颜色。
+
+### 环境光
+环境光是很少量的一种光照。将光的颜色（白色）乘以一个很小的因子，再乘以物体颜色，即产生环境光。
 ``` C++
-static void key_call_back(GLFwindow* window, 
-    int key ,
-    int scanCode, 
-    int action, 
-    int mod)；
+void main()
+{
+    float ambientStrength = 0.1;
+    vec3 ambient = ambientStrength * lightColor;
+
+    vec3 result = ambient * objectColor;
+    FragColor = vec4(result, 1.0);
+}
 ```
-在回调函数中判断拿下的键是否是`Y`, `Shift+Y`, `D`, `Shift+D`, `R`, `Shift+R`.
-其中不按下`shift`时，`mod`为0， 按下`shift`时`mod`为1.通过检测`mod`可以知道`shift`是否有按下。
+### 漫反射光
+漫反射光是冯氏光照模型中最显著的一种光照。其基于的原理是，光源与平面的夹角越小，光线越暗，夹角越大，光线越亮。为了刻画光线和平面的夹角，一般使用平面的法线和光线的夹角的余弦值来表示。余弦值越接近1，代表光照越强，越接近0则表示光照越弱。
 
-当按下时，`action = 1`,松开时，`action = 0`, 当持续按下时，`action = 2`。
+obj文件中，一般自带面的法向量，故只需读取文件，并计算夹角即可。
 
-回调函数会修改若干个全局变量，记录着小球的自转角度和公转角度。在程序的其他部分，这些全局变量用来产生矩阵，进而产生进一步的视觉效果。
+值得注意的是，法向量一般是模型坐标系中的法向量。但光照的计算往往发生在世界坐标系。故需要对模型坐标系中的法向量做坐标变换，变换到世界坐标系中的法向量。值得注意的是，平移操作对向量是不起作用的。
 
-### 球的框线
-在本实现中，以`Z`轴为球轴，以`XOY`平面为切面，切除的大圆作为球的纬线。
+如果采用四元组的方式表示向量，则第四维为0，所有的平移操作不会对该向量造成改变。直接采用矩阵运算即可完成法向量的坐标变换。
+### 镜面光照
+和漫反射光照一样，镜面光照也是依据光的方向向量和物体的法向量来决定的，但是它也依赖于观察方向，例如玩家是从什么方向看着这个片段的。镜面光照是基于光的反射特性。如果我们想象物体表面像一面镜子一样，那么，无论我们从哪里去看那个表面所反射的光，镜面光照都会达到最大化。
 
-为画出纬线，首先要求出大圆的半径$$r = \sqrt{R^2 - d^2}$$
-其中R为球的半径，d为截面距离球心的距离。其中在本坐标系中，有$$d = z_0$$
-即距离恰好为截面的z轴截距。
-当确定好这些参数后，可以知道$z = z_0$截面截出的大圆的方程为
-$$
-\begin{aligned}
-x &= r\cos\theta \\
-y &= r\sin\theta \\
-z &= z_0
-\end{aligned}
-$$
+在计算镜面光照时，先假设发生了镜面反射，算出反射射出的光线的角度。再比较人的视角和射出的光线的角度。若两者越接近，则镜面反射的效果就越强，否则就越弱。
+## 实现代码
+### 顶点着色器
+顶点着色器的代码很简单。其输入是每个顶点的坐标和该定点所在平面的法向量的坐标。相关的输入还有MVP矩阵，Model矩阵，View矩阵，光源在世界坐标系中的位置等。
 
-
-为了画出球的经线，需要用球的参数方程。
-$$
-\begin{aligned}
-x &= R\cos\theta\cos\phi \\
-y &= R\sin\theta\cos\phi \\
-z &= R\sin\phi
-\end{aligned}
-$$
-其中R是定值。
-
-通过基础的解析几何知识可知，一条经线由两束曲线构成。
-当固定$\theta = \theta_0$，$\phi$从0变化到$\pi$时，是经线的一半。
-取$\theta = \theta_0 + \pi$，$\phi$从$\pi$变化到$2\pi$时，是经线的另一半。
-
-有了这些结论，就可以画出球的若干个经线和纬线。
-
-### 立体效果
-对于小球来说。其需要平移到世界坐标系的某个位置。其需要作伸缩变换（小球和大球在模型坐标系下是一模一样的，只是在变换到世界坐标系时需要作缩小）。其还需要作旋转变换（小球可以自转)
-由此可知Model变化矩阵的表达式应与下列代码相似。
+其通过简单的数学运算，向段着色器输出定点世界坐标系的位置，法向量在摄像机坐标系中的位置，眼睛的方向和光的方向等。
 ``` C++
-glm::mat4 Rotate = 
-    glm::rotate(Identity, float(spin_rotate), glm::vec3(0, 1, 0));
-glm::mat4 Scale = 
-    glm::scale(Identity, glm::vec3(0.5, 0.5, 0.5));
-glm::mat4 Translation = 
-    glm::translate(Identity, glm::vec3(3, 0, 0));
-glm::mat4 Revolution = 
-    glm::rotate(Identity, float(revolution_rotate), glm::vec3(0, 1, 0));
-glm::mat4 Model = 
-    Revolution * Translation * Scale * Rotate;
+#version 330 core
+// Input vertex data, different for all executions of this shader.
+layout(location = 0) in vec3 vertexPosition_modelspace;
+layout(location = 1) in vec3 vertexNormal_modelspace;
+
+// Output data ; will be interpolated for each fragment.
+out vec3 Position_worldspace;
+out vec3 Normal_cameraspace;
+out vec3 EyeDirection_cameraspace;
+out vec3 LightDirection_cameraspace;
+
+// Values that stay constant for the whole mesh.
+uniform mat4 MVP;
+uniform mat4 V;
+uniform mat4 M;
+uniform vec3 LightPosition_worldspace;
+
+void main(){
+
+	gl_Position =  MVP * vec4(vertexPosition_modelspace,1);
+	Position_worldspace = 
+		(M * vec4(vertexPosition_modelspace,1)).xyz;
+	vec3 vertexPosition_cameraspace = 
+		( V * M * vec4(vertexPosition_modelspace,1)).xyz;
+	EyeDirection_cameraspace = 
+		vec3(0,0,0) - vertexPosition_cameraspace;
+	vec3 LightPosition_cameraspace = 
+		( V * vec4(LightPosition_worldspace,1)).xyz;
+	LightDirection_cameraspace = 
+		LightPosition_cameraspace + EyeDirection_cameraspace;
+	Normal_cameraspace = 
+		( V * M * vec4(vertexNormal_modelspace,0)).xyz; 
+}
 ```
-Rotate矩阵将小球绕y轴自转`spin_rotate`角度。Scale矩阵将小球等比缩放为原来的一半。Translate矩阵将小球平移到世界坐标系的(3, 0, 0)位置。Revolution矩阵作用于平移后的小球，使其公转。
+### 段着色器
+端着色器的实现分为三大部分，如上述冯氏模型所述。其分别计算环境光、漫反射光和镜面反射光，将其合并，产生最终的光照效果。
 
-最后的Model矩阵为这些矩阵的乘积。
+实现中用到了clamp函数，这是因为计算余弦值时，有可能出现结果为负数的情况。这是由于平面背对光源，法向量与光线形成的夹角不是锐角或直角。clamp将所有大于1的数截断到1，小于0的数截断到0.
 
-Projection矩阵和View矩阵与前一个项目一致。不再赘述。
+
 ``` C++
-glm::mat4 Projection = glm::perspective(
-    glm::radians(45.0f), 
-    float(16)/9, 
-    0.1f, 
-    100.0f);
-glm::mat4 View = glm::lookAt(
-    glm::vec3(0, 0, 8),
-    glm::vec3(0, 0, 0),
-    glm::vec3(0, 1, 0)
-);
-glm::mat4 Identity = glm::mat4(1.0f);
+#version 330 core
+in vec3 Position_worldspace;
+in vec3 Normal_cameraspace;
+in vec3 EyeDirection_cameraspace;
+in vec3 LightDirection_cameraspace;
+
+out vec3 color;
+
+uniform mat4 MV;
+uniform vec3 LightPosition_worldspace;
+
+void main(){
+
+	vec3 LightColor = vec3(1,1,1);
+	float LightPower = 50.0f;
+	vec3 MaterialDiffuseColor = vec3(1.0, 1.0, 1.0);
+	vec3 MaterialAmbientColor = 
+		vec3(0.1,0.1,0.1) * MaterialDiffuseColor;
+	vec3 MaterialSpecularColor = vec3(0.3,0.3,0.3);
+
+	float distance = 
+		length( LightPosition_worldspace - Position_worldspace );
+
+	vec3 n = normalize( Normal_cameraspace );
+	vec3 l = normalize( LightDirection_cameraspace );
+	// clamped above 0
+	//  - light is at the vertical of the triangle -> 1
+	//  - light is perpendicular to the triangle -> 0
+	//  - light is behind the triangle -> 0
+	float cosTheta = clamp( dot( n,l ), 0,1 );
+	
+	vec3 E = normalize(EyeDirection_cameraspace);
+	vec3 R = reflect(-l,n);
+	// clamped to 0
+	//  - Looking into the reflection -> 1
+	//  - Looking elsewhere -> < 1
+	float cosAlpha = clamp( dot( E,R ), 0,1 );
+	
+	color = 
+		// Ambient : simulates indirect lighting
+		MaterialAmbientColor +
+		// Diffuse : "color" of the object
+		MaterialDiffuseColor * LightColor * LightPower * cosTheta / (distance*distance) +
+		// Specular : reflective highlight, like a mirror
+		MaterialSpecularColor * LightColor * LightPower * pow(cosAlpha,5) / (distance*distance);
+
+}
 ```
-
-最后的`mvp`矩阵表示为Project, View, Model矩阵的乘积。需要留意矩阵乘法是右结合的。
-
-`glGetUniformLocation`和`lgUniforMatrix4fv`用于向着色器写入矩阵。
-```C++
-glm::mat4 mvp = Projection * View * Model;
-
-GLuint MVP_ID = glGetUniformLocation(programID, "MVP");
-glUniformMatrix4fv(MVP_ID, 1, GL_FALSE, &mvp[0][0]);
-```
-
